[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-Bridge"
version = "1.11.5"
authors = [
    {name = "windsnow1025", email = "windsnow1025@gmail.com"}
]
description = "A Bridge for LLMs"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["llm", "ai"]
license = "MIT"
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "fastapi",
    "httpx",
    "tenacity",
    "openai==1.106.1",
    "tiktoken==0.11.0",
    "google-genai==1.46.0",
    "anthropic==0.66.0",
    "PyMuPDF",
    "docxlatex>=1.1.1",
    "openpyxl",
    "python-pptx",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "protobuf"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_bridge*"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"