[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LLM-Bridge"
version = "1.15.8"
dependencies = [
    "fastapi",
    "httpx",
    "tenacity",
    "openai==2.9.0",
    "tiktoken==0.11.0",
    "google-genai==1.46.0", # google.genai
    "anthropic==0.75.0",
    "PyMuPDF", # fitz
    "docxlatex>=1.1.1",
    "openpyxl",
    "python-pptx", # pptx
]
requires-python = ">=3.12"
authors = [
    {name = "windsnow1025", email = "windsnow1025@gmail.com"}
]
description = "A Bridge for LLMs"
readme = "README.md"
license = "MIT"
keywords = ["llm", "ai"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "python-dotenv==1.2.1", #dotenv
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
